--- a/style.css
+++ b/style.css
@@ -21,12 +21,21 @@ h1:hover{
     color: #0536d5;
 }
 
-@media(max-width: 1250px){
+@media (min-width: 600px) and (max-width: 1250px){
+    h1{
+        display: block;
+        height: 350px;
+        width: 100%;
+        padding: 10px;
+    }
+}
+
+@media(max-width: 600px){
     h1{
         display: block;
         height: 100px;
-        width: 400px;
+        width: 100%;
         padding: 10px;
-        padding-left: 10px;
     }
+
 }
